--- a/code/index.html
+++ b/code/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- Add your code here! -->
+
+<div class="weather-widget">
+  <div id="Stockholm">
+
+
+
+  </div>
+</div>
+
   </body>
+  <script src="script.js"> </script>
 </html>
